Fix top of menu alignment

--- a/css/style.css
+++ b/css/style.css
@@ -66,6 +66,7 @@ h2 {margin-bottom: 2px; padding-bottom: 0;}
 
 #selector ul {height: 100%; list-style: none; width: 100%; margin: 0; padding: 0;}
 #selector ul li {margin-left: auto; margin-right: 0; border-top: 1px solid gray; border-left: 4px solid gray; position: relative;}
+#selector ul li:first-child {border-top: 0;}
 #selector ul li:last-child {border-bottom: 1px solid gray;}
 #selector ul li.selected {background-color: black; border-left: 4px solid brown;}
 #selector ul li a {font-size: 0.9em; padding: 17px 7px; display: block; text-align: center;}
